flux/clusters/infrastructure/base/authentik/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.0.0
    tailscale.com/proxy-group: tailscale
  name: tailscale
  namespace: authentik
spec:
  gatewayClassName: tailscale
  listeners:
  - hostname: authentik
    name: authentik-http
    port: 80
    protocol: HTTP
  - hostname: authentik
    name: authentik-https
    port: 443
    protocol: HTTPS
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.0.0
  name: authentik-server-authentik
  namespace: authentik
spec:
  hostnames:
  - authentik
  parentRefs:
  - name: tailscale
    port: 443
  rules:
  - backendRefs:
    - name: authentik-server
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.0.0
  name: authentik-server-authentik-http
  namespace: authentik
spec:
  hostnames:
  - authentik
  parentRefs:
  - name: tailscale
    port: 80
  rules:
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 301
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /
